@@ -19,6 +19,7 @@
   * XML::Node#content= safely unlinks previous content. GH #203
   * XML::Node#namespace= takes nil as a parameter
   * XML::Node#xpath returns things other than NodeSet objects. GH #208
+  * XSLT::StyleSheet#transform accepts hashes for parameters. GH #223
 
 === 1.4.1 / 2009/12/10
 
